objects/Material_Order__c/Material_Order__c.object-meta.xml
<CustomObject>
    <label>Material Order</label>
    <nameField>
        <displayFormat>MO-{00000}</displayFormat>
        <label>MO#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Material Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>