objects/Material_Order__c/fields/MO_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>MO_Due_Date__c</fullName>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>